--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,6 +1,20 @@
-@import './base.css';
+@import "./base.css";
+.bg-cinema {
+  background-color: rgba(204, 0, 40, 1);
+}
+h1,
+h2,
+h3 {
+  font-family: "Oswald", sans-serif;
+}
 
-#app {
+h4,
+h5,
+h6,
+p {
+  font-family: "Montserrat", sans-serif;
+}
+/* #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -32,4 +46,4 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
-}
+} */
