--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -14,8 +14,9 @@ h6,
 p {
   font-family: "Montserrat", sans-serif;
 }
-
+html,
 body {
+  height: 100%;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -24,5 +25,5 @@ body {
 #app {
   display: flex;
   flex-direction: column;
-  align-items: space-between;
+  min-height: 100vh;
 }
