--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -14,12 +14,9 @@ h3{
 }
 
 h1 {
-    font-size: 80px;
-}
-@media screen and (min-width: 800px) {
-    h1 {
-    font-size: 128px;
-}
+    font-size: 60px;
+    line-height: 1.1em;
+
 
 h2 {
     font-size: 48px;
