--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -25,6 +25,7 @@ h2 {
 
 h3 {
     font-size: 18px;
+    line-height: 1.2em;
 }
 
 @media screen and (min-width: 640px) {
@@ -41,7 +42,8 @@ h3 {
     }
 
     body {
-        font-size: 18px;
+        font-size: 16px;
+        line-height: 1.8em;
     }
 }
 
@@ -56,7 +58,46 @@ h3 {
     }
 
     h3 {
-        font-size: 34px;
+        font-size: 36px;
+    }
+
+    body {
+        font-size: 18px;
+        line-height: 1.7em;
+    }
+}
+
+
+@media screen and (min-width: 1024px) {
+    h1 {
+        font-size: 60px;
+    }
+
+    h2 {
+        font-size: 56px;
+    }
+
+    h3 {
+        font-size: 42px;
+        lint-height: 1.3em;
+    }
+
+    body {
+        font-size: 20px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    h1 {
+        font-size: 60px;
+    }
+
+    h2 {
+        font-size: 60px;
+    }
+
+    h3 {
+        font-size: 48px;
         lint-height: 1.3em;
     }
 
@@ -64,7 +105,4 @@ h3 {
         font-size: 22px;
     }
 }
-
-
-
 
