--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -9,7 +9,8 @@ body {
 
 h1,
 h2,
-h3{
+h3,
+h4{
     font-family: "Oswald", sans-serif;
     text-transform: uppercase;
 }
@@ -29,6 +30,10 @@ h3 {
     line-height: 1.2em;
 }
 
+h4 {
+    font-size: 15px;
+}
+
 @media screen and (min-width: 640px) {
     h1 {
         font-size: 50px;
@@ -40,6 +45,10 @@ h3 {
 
     h3 {
         font-size: 26px;
+    }
+
+    h4 {
+        font-size: 20px;
     }
 
     body {
@@ -60,6 +69,10 @@ h3 {
 
     h3 {
         font-size: 36px;
+    }
+
+    h4 {
+        font-size: 26px;
     }
 
     body {
@@ -83,6 +96,10 @@ h3 {
         line-height: 1.3em;
     }
 
+    h4 {
+        font-size: 30px;
+    }
+
     body {
         font-size: 20px;
     }
@@ -100,6 +117,10 @@ h3 {
     h3 {
         font-size: 44px;
         line-height: 1.3em;
+    }
+
+    h4 {
+        font-size: 34px;
     }
 
     body {
